--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Flask==0.9
 Flask-Login==0.1.3
 Flask-SQLAlchemy==0.16
+Flask-WTF==0.8.3
 Jinja2==2.6
 SQLAlchemy==0.8.0
+WTForms==1.0.3
 Werkzeug==0.8.3
 argparse==1.2.1
 distribute==0.6.24
